add flex y position fixed a header|| create pages

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
 <body>
     <header>
         <!--nav bar y nombre-->
-        <h1>
-            <strong>nicolás jaimez</strong>
-        </h1>
+        <div>
+            <h1>
+                <strong>nicolás jaimez</strong>
+            </h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">inicio</a></li>
-                <li><a href="#">experencias</a></li>
-                <li><a href="#">formación</a></li>
-                <li><a href="#">contacto</a></li>
+                <li><a href="./sections/experencias.html">experencias</a></li>
+                <li><a href="./sections/formacion.html">formación</a></li>
+                <li><a href="./sections/contacto.html">contacto</a></li>
             </ul>
         </nav>
 
