repair routes on navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">inicio</a></li>
+                <li><a class="actived" href="index.html">inicio</a></li>
                 <li><a href="./sections/experencias.html">experencias</a></li>
                 <li><a href="./sections/formacion.html">formación</a></li>
                 <li><a href="./sections/contacto.html">contacto</a></li>
