--- a/sections/experencias.html
+++ b/sections/experencias.html
@@ -23,9 +23,9 @@
         <nav>
             <ul>
                 <li><a href="../index.html">inicio</a></li>
-                <li><a href="./experencias.html">experencias</a></li>
-                <li><a href="./formacion.html">formación</a></li>
-                <li><a href="./contacto.html">contacto</a></li>
+                <li><a href="experencias.html">experencias</a></li>
+                <li><a href="formacion.html">formación</a></li>
+                <li><a href="contacto.html">contacto</a></li>
             </ul>
         </nav>
 
