add actived class to navbar & transparent border

--- a/sections/formacion.html
+++ b/sections/formacion.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="../index.html">inicio</a></li>
                 <li><a href="experencias.html">experencias</a></li>
-                <li><a href="formacion.html">formación</a></li>
+                <li><a class="active" href="formacion.html">formación</a></li>
                 <li><a href="contacto.html">contacto</a></li>
             </ul>
         </nav>
