--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -24,7 +24,7 @@
                 <li><a href="../index.html">inicio</a></li>
                 <li><a href="experencias.html">experencias</a></li>
                 <li><a href="formacion.html">formación</a></li>
-                <li><a href="contacto.html">contacto</a></li>
+                <li><a class="active" href="contacto.html">contacto</a></li>
             </ul>
         </nav>
 
