add flexbox to main, create div imagen_y_parrafo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!--nav bar y nombre-->
-        <div>
+        <div class="h1">
             <h1>
                 <strong>nicolás jaimez</strong>
             </h1>
@@ -31,22 +31,25 @@
 
     <main>
         <!--bienvenida al sitio-->
-        <h2>¡Bienvenidos!</h2>
-        <p>
-            Soy un santiagueño viviendo en la provincia de Santa
-            Cruz, más precisamente en la pequeña localidad de
-            Comandante Luis
-            Piedrabuena. <br>
-            Mi día a día es bastante caótico, pero sin lugar a duda puedo decir que todos los días aprendo algo
-            nuevo,
-            incluso de
-            materias que creía que nada tienen que ver una con otra. El insight más importante que descubrí en este
-            tiempo es que no
-            podía estar más equivocado...</p>
-        <figure>
-            <img class="de_perfil" src="./images/foto_sinfondo.png" alt="Foto de perfil" title="Foto de perfil"
-                width="250px">
-        </figure>
+        <div class="h2">
+            <h2>¡Bienvenidos!</h2>
+        </div>
+        <div class="imagen_y_parrafo">
+            <p class="parrafo_central">
+                Soy un santiagueño viviendo en la provincia de Santa
+                Cruz, más precisamente en la pequeña localidad de
+                Comandante Luis
+                Piedrabuena. <br>
+                Mi día a día es bastante caótico, pero sin lugar a duda puedo decir que todos los días aprendo algo
+                nuevo,
+                incluso de
+                materias que creía que nada tienen que ver una con otra. El insight más importante que descubrí en este
+                tiempo es que no
+                podía estar más equivocado...</p>
+            <figure class="figure_de_perfil">
+                <img class="img_de_perfil" src="./images/foto_sinfondo.png" alt="Foto de perfil" title="Foto de perfil">
+            </figure>
+        </div>
     </main>
     <section>
 
