correct word experiencias in all files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a class="active" href="index.html">inicio</a></li>
-                <li><a href="./sections/experencias.html">experencias</a></li>
+                <li><a href="./sections/experiencias.html">experiencias</a></li>
                 <li><a href="./sections/formacion.html">formación</a></li>
                 <li><a href="./sections/contacto.html">contacto</a></li>
             </ul>
