--- a/sections/experiencias.html
+++ b/sections/experiencias.html
@@ -23,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">inicio</a></li>
-                <li><a class="active" href="experencias.html">experencias</a></li>
+                <li><a class="active" href="experiencias.html">experiencias</a></li>
                 <li><a href="formacion.html">formación</a></li>
                 <li><a href="contacto.html">contacto</a></li>
             </ul>
