--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -22,7 +22,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">inicio</a></li>
-                <li><a href="experencias.html">experencias</a></li>
+                <li><a href="experiencias.html">experiencias</a></li>
                 <li><a href="formacion.html">formación</a></li>
                 <li><a class="active" href="contacto.html">contacto</a></li>
             </ul>
