delete increase font size to a:hover,create class parrafo_section

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         </div>
     </main>
     <section>
-
+        <!-- Seccion con novedades (la idea es que se muestren los proyectos actuales) -->
         <h3>Ocupación actual</h3>
-        <p>
+        <p class="parrafo_section">
             Como auxiliar docente, trabajo todas las mañanas con un grupo de adolescentes de entre 14 a 16 años, lo
             que requiere,
             además de mucha comprensión y empatía para escuchar sus inquietudes, un carácter que combine amabilidad con
@@ -63,14 +63,14 @@
             Gracias a mis experiencias de voluntariado en donde trabaje mis cualidades de liderazgo, este trabajo se me
             hizo muy
             ameno, y puedo desenvolverme comodamente. </p>
-        <p>
+        <p class="parrafo_section">
             En cuanto a mi formación académica, me encuentro escribiendo mi trabajo final de grado para obtener
             el título de
             Licenciado en Relaciones Internacionales. <br>
             Este desafío mayúsculo, requiere de mucha concentración, planificación, y de paciencia para poder realizar
             un buen
             análisis de los datos.</p>
-        <p>
+        <p class="parrafo_section">
             En busca de nuevos horizontes y desafíos, comencé a estudiar Desarrollo Web. De manera autodidacta
             primero, y
             actualmente en una diplomatura universitaria.
