change footer completely, delete previous images

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <nav>
             <ul>
-                <li><a class="active" href="index.html">inicio</a></li>
-                <li><a href="./sections/experiencias.html">experiencias</a></li>
-                <li><a href="./sections/formacion.html">formación</a></li>
-                <li><a href="./sections/contacto.html">contacto</a></li>
+                <li class="lista_eje_x"><a class="active" href="index.html">inicio</a></li>
+                <li class="lista_eje_x"><a href="./sections/experiencias.html">experiencias</a></li>
+                <li class="lista_eje_x"><a href="./sections/formacion.html">formación</a></li>
+                <li class="lista_eje_x"><a href="./sections/contacto.html">contacto</a></li>
             </ul>
         </nav>
 
@@ -59,7 +59,7 @@
             que requiere,
             además de mucha comprensión y empatía para escuchar sus inquietudes, un carácter que combine amabilidad con
             un cierto
-            grado de rigurosidad. <br>
+            grado de rigurosidad.
             Gracias a mis experiencias de voluntariado en donde trabaje mis cualidades de liderazgo, este trabajo se me
             hizo muy
             ameno, y puedo desenvolverme comodamente. </p>
@@ -77,13 +77,13 @@
         </p>
     </section>
     <footer>
-        <ul>
-            <li><a href="mailto:jaimeznicolas1@gmail.com" target="_blank"><img src="./images/icons_mail.svg" alt="Mail"
-                        width="55px">
+        <!-- <ul> 
+            <li class="lista_eje_x"><a href="mailto:jaimeznicolas1@gmail.com" target="_blank"><img class="imagen_footer"
+                        src="./images/mail_yellow.png" alt="Mail">
                 </a></li>
-            <li><a href="https://www.linkedin.com/in/nicol%C3%A1s-jaimez-leguina-a0253523b" target="_blank"><img
-                        src="./images/icons_linkedin.svg" alt="linkedin" width="55px"></a></li>
-        </ul>
+            <li class="lista_eje_x"><a href="https://www.linkedin.com/in/nicol%C3%A1s-jaimez-leguina-a0253523b"
+                    target="_blank"><img class="imagen_footer" src="./images/linkedin_blue.svg" alt="linkedin"></a></li>
+        </ul>-->
     </footer>
 
 
