--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@
         </p>
     </section>
     <footer>
-        <!-- <ul> 
-            <li class="lista_eje_x"><a href="mailto:jaimeznicolas1@gmail.com" target="_blank"><img class="imagen_footer"
-                        src="./images/mail_yellow.png" alt="Mail">
+        <ul>
+            <li class="lista_eje_x"><a href="mailto:jaimeznicolas1@gmail.com" target="_blank"><img
+                        src="https://img.icons8.com/color/48/000000/apple-mail.png" alt="Mail">
                 </a></li>
             <li class="lista_eje_x"><a href="https://www.linkedin.com/in/nicol%C3%A1s-jaimez-leguina-a0253523b"
-                    target="_blank"><img class="imagen_footer" src="./images/linkedin_blue.svg" alt="linkedin"></a></li>
-        </ul>-->
+                    target="_blank"><img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="linkedin"></a>
+            </li>
+        </ul>
     </footer>
 
 
