--- a/sections/formacion.html
+++ b/sections/formacion.html
@@ -14,17 +14,17 @@
 
     <header>
         <!--nav bar y nombre-->
-        <div>
+        <div class="h1">
             <h1>
                 <strong>nicolás jaimez</strong>
             </h1>
         </div>
         <nav>
             <ul>
-                <li><a href="../index.html">inicio</a></li>
-                <li><a href="experiencias.html">experiencias</a></li>
-                <li><a class="active" href="formacion.html">formación</a></li>
-                <li><a href="contacto.html">contacto</a></li>
+                <li class="lista_eje_x"><a href="../index.html">inicio</a></li>
+                <li class="lista_eje_x"><a href="experiencias.html">experiencias</a></li>
+                <li class="lista_eje_x"><a class="active" href="formacion.html">formación</a></li>
+                <li class="lista_eje_x"><a href="contacto.html">contacto</a></li>
             </ul>
         </nav>
 
