erase .lista_eje_x. Add flex to ul

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
         <nav>
             <ul>
-                <li class="lista_eje_x"><a class="active" href="index.html">inicio</a></li>
-                <li class="lista_eje_x"><a href="./sections/experiencias.html">experiencias</a></li>
-                <li class="lista_eje_x"><a href="./sections/formacion.html">formación</a></li>
-                <li class="lista_eje_x"><a href="./sections/contacto.html">contacto</a></li>
+                <li><a class="active" href="index.html">inicio</a></li>
+                <li><a href="./sections/experiencias.html">experiencias</a></li>
+                <li><a href="./sections/formacion.html">formación</a></li>
+                <li><a href="./sections/contacto.html">contacto</a></li>
             </ul>
         </nav>
 
@@ -78,11 +78,11 @@
     </section>
     <footer>
         <ul>
-            <li class="lista_eje_x"><a href="mailto:jaimeznicolas1@gmail.com" target="_blank"><img
+            <li><a href="mailto:jaimeznicolas1@gmail.com" target="_blank"><img
                         src="https://img.icons8.com/color/48/000000/apple-mail.png" alt="Mail">
                 </a></li>
-            <li class="lista_eje_x"><a href="https://www.linkedin.com/in/nicol%C3%A1s-jaimez-leguina-a0253523b"
-                    target="_blank"><img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="linkedin"></a>
+            <li><a href="https://www.linkedin.com/in/nicol%C3%A1s-jaimez-leguina-a0253523b" target="_blank"><img
+                        src="https://img.icons8.com/color/48/000000/linkedin.png" alt="linkedin"></a>
             </li>
         </ul>
     </footer>
