Add link to index in h1 tag. Change a:hover and .active style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--nav bar y nombre-->
 
         <h1>
-            <strong>nicolás jaimez</strong>
+            <a href="index.html"><strong>nicolás jaimez</strong></a>
         </h1>
 
         <nav>
