establish id footer to go to the footer (in index.html so far) . Erase contacto.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a class="active" href="index.html">inicio</a></li>
                 <li><a href="./sections/experiencias.html">experiencias</a></li>
                 <li><a href="./sections/formacion.html">formación</a></li>
-                <li><a href="./sections/contacto.html">contacto</a></li>
+                <li><a href="#footer">contacto</a></li>
             </ul>
         </nav>
 
@@ -76,7 +76,7 @@
             actualmente en una diplomatura universitaria.
         </p>
     </section>
-    <footer>
+    <footer id="footer">
         <ul>
             <li><a href="mailto:jaimeznicolas1@gmail.com" target="_blank"><img
                         src="https://img.icons8.com/color/48/000000/apple-mail.png" alt="Mail">
