--- a/sections/formacion.html
+++ b/sections/formacion.html
@@ -24,7 +24,7 @@
                 <li class="lista_eje_x"><a href="../index.html">inicio</a></li>
                 <li class="lista_eje_x"><a href="experiencias.html">experiencias</a></li>
                 <li class="lista_eje_x"><a class="active" href="formacion.html">formación</a></li>
-                <li class="lista_eje_x"><a href="contacto.html">contacto</a></li>
+                <li class="lista_eje_x"><a href="#">contacto</a></li>
             </ul>
         </nav>
 
