--- a/sections/experiencias.html
+++ b/sections/experiencias.html
@@ -25,7 +25,7 @@
                 <li class="lista_eje_x"><a href="../index.html">inicio</a></li>
                 <li class="lista_eje_x"><a class="active" href="experiencias.html">experiencias</a></li>
                 <li class="lista_eje_x"><a href="formacion.html">formación</a></li>
-                <li class="lista_eje_x"><a href="contacto.html">contacto</a></li>
+                <li class="lista_eje_x"><a href="#">contacto</a></li>
             </ul>
         </nav>
 
