--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         <nav>
             <ul>
-                <li><a class="active" href="index.html">inicio</a></li>
-                <li><a href="./sections/experiencias.html">experiencias</a></li>
-                <li><a href="./sections/formacion.html">formación</a></li>
+                <li><a href="index.html">inicio</a></li>
+                <li><a href="#">experiencias</a></li>
+                <li><a href="#">formación</a></li>
                 <li><a href="#footer">contacto</a></li>
             </ul>
         </nav>
